# battle_score

./: .editorconfig  Aptfile  CODING_STYLE.md  Dockerfile  Justfile  README.md  battle-score.code-workspace  docker-compose.yml  entrypoint.sh  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
core/: constants.py  models.py  utils.py
core/settings/: base.py
core/templates/: base.html  base_minimal.html
docs/: UX_STYLE.md
templates/: base.html
tournament/: admin.py  controllers.py  models.py
tournament/migrations/: 0005_rename_datetime_match_date_start_and_more.py  0006_tournament_nb_team_matches_and_more.py
tournament/templates/tournament/: _match_card.html  _match_card_coming.html  _match_card_done.html  match_create.html  match_detail.html  match_update.html  matches.html  ranking.html  team_create.html  team_create_partial.html  team_detail.html  team_detail_partial.html  team_form_partial.html  teams.html  teams_list_partial.html  tournament_base.html
tournament/tests/: test_controllers.py  test_models.py
tournament/web/: forms.py  urls.py  views.py
tournament/web/tests/: test_auto_match.py  test_controllers.py  test_matches.py  test_teams.py
user/: controllers.py
user/templates/user/: dashboard.html  settings.html
user/web/: forms.py  views.py
user/web/tests/: test_auth_redirection.py  test_dashboard.py  test_email_normalization.py  test_password_update.py  test_user_deletion.py  test_user_login.py  test_user_signup.py
