[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "user", "tournament"]

[tool.hatch.version]
path = "core/version.py"

[project]
dynamic = ["version"]
name = "battle-score"
description = "Application to manage tournament participants (invite, team, role, ...), and matches (score, ordering, classment, ...)."
keywords = ["tournament", "match", "score", "classment"]
authors = [
  { name="Jérémy MARC"},
]
maintainers = [
  { name="Jérémy MARC"},
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BUSL-1.1"
license-files = ["LICENSE.md"]

dependencies = [
    "django>=5.1",
    "python-decouple",
    "dj-database-url",
    "psycopg[binary]",
    "django-rq",
    "django-extensions",
    "django-filter",
    "djangorestframework",
    "django-cors-headers",
    "django-model-utils",
    "pillow>=12.1.0",
    "tldextract~=5.3.0",
    "colored~=2.3.0",
    "dateparser~=1.2.0",
    "python-dateutil==2.9.0.post0",
    "magicattr~=0.1.6",
    "ipdb>=0.13.13",
]

[dependency-groups]
dev = [
    "pytest-django",
    "pytest-factoryboy",
    "ipdb",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/bromatofiel/battle-score"
Repository = "https://github.com/bromatofiel/battle-score"
Issues = "https://github.com/bromatofiel/battle-score/issues"
